# Quantum-assisted-OC

./: README.md  pyproject.toml  qsvt_analysis.ipynb  qsvt_optimal_poly.py  tfm_env.yml
notebooks/: Schrodingerization.ipynb  conditioning_comparison.ipynb  trajectories_m&v.ipynb  trajectories_riccati.ipynb
src/: __init__.py
src/lqr/: riccati.py
src/methods/: __init__.py  common.py  method_m.py  method_v.py  sweep_horizon_mv.py
src/models/: __init__.py  cart_pendulum.py  lqr_model.py  vehicle_platoon.py
src/utils/: integrate.py  metrics.py  plotting.py  schroding.py
utils/: export.py  riccati_maps.py  trajectory.py
