[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-assisted-optimal-control-examples"
version = "0.1.0"
description = "Quantum-assisted optimal control examples"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy", "matplotlib"]

[project.optional-dependencies]
quantum = ["qiskit>=1.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
